# NMDB-FD-PredictorWithGraphs

./: .gitignore  README.md  pyproject.toml
data/: dataset_all.imp_imput-False_threshold-False.csv  dataset_all.imp_imput-True_threshold-True.csv  dataset_all.original_imput-False_threshold-False.csv  dataset_all.original_imput-True_threshold-True.csv  dataset_all_imput-False_threshold-False.csv  dataset_all_imput-True_threshold-True.csv  dataset_summary.csv
data/ForbushDecrease/: dataset.csv  dataset.imp.csv  events.csv  stations_metadata.csv
data/ForbushDecrease/2001-04-08/: all.imp.txt  all.original.txt  all.txt
data/ForbushDecrease/2001-04-11/: all.imp.txt  all.original.txt  all.txt
data/ForbushDecrease/2001-04-28/: all.imp.txt  all.original.txt  all.txt
data/ForbushDecrease/2001-09-25/: all.imp.txt  all.original.txt  all.txt
data/ForbushDecrease/2001-10-11/: all.imp.txt  all.original.txt  all.txt
data/ForbushDecrease/2001-10-21/: all.imp.txt  all.original.txt  all.txt
data/ForbushDecrease/2001-11-06/: all.imp.txt  all.original.txt  all.txt
data/ForbushDecrease/2001-11-24/: all.imp.txt  (+2 more)
notebooks/: 001_tests_with_graphs.ipynb  002_calc_some_stats.ipynb  002_explore_more_graphs.ipynb  003_create_dataset.ipynb  004_tests_on_dataset.ipynb  005.1_plots_per_cutoff_group.ipynb  005_plots_per_conf.ipynb  005_violinplots.ipynb  006_first_ai_classifier_models.ipynb  007_ai_models.ipynb  008_plots_for_paper.ipynb  dataset.csv
utils/: __init__.py  constants.py  dataset.py  dtypes.py  enums.py  graph.py  load.py  metrics.py  normalize.py  plots.py  utils.py
(+77 files in other folders)
